cmake_minimum_required(VERSION 3.19)
project(LettCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LettCode main.cpp
        Stack_and_Queue/LC_155_Min_Stack.cpp
        Stack_and_Queue/LC_155_Min_Stack.h
        Arrays/LC_496_Next_Greater_Element.cpp
        Arrays/LC_496_Next_Greater_Element.h

        )